src/test/ui/nll/guarantor-issue-46974.stderr
error[E0506]: cannot assign to `*s` because it is borrowed
  --> $DIR/guarantor-issue-46974.rs:9:5
   |
LL |     let t = &mut *s; // this borrow should last for the entire function
   |             ------- borrow of `*s` occurs here
LL |     let x = &t.0;
LL |     *s = (2,);
   |     ^^^^^^^^^ assignment to borrowed `*s` occurs here
LL |     *x
   |     -- borrow later used here

error: lifetime may not live long enough
  --> $DIR/guarantor-issue-46974.rs:15:5
   |
LL | fn bar(s: &Box<(i32,)>) -> &'static i32 {
   |           - let's call the lifetime of this reference `'1`
LL |     // FIXME(#46983): error message should be better
LL |     &s.0
   |     ^^^^ returning this value requires that `'1` must outlive `'static`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0506`.
